Added all required cpp files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,5 +17,5 @@ set(SOURCE_FILES main.cpp
         Exceptions.cpp Exceptions.h
         Strategy.h
         DefaultAgentStrategy.cpp DefaultAgentStrategy.h
-        Gaming.h AggressiveAgentStrategy.cpp AggressiveAgentStrategy.h)
+        Gaming.h AggressiveAgentStrategy.cpp AggressiveAgentStrategy.h game.cpp.cpp Game.cpp Gaming.cpp Piece.cpp Agent.cpp Resource.cpp Simple.cpp Strategic.cpp Food.cpp Advantage.cpp AggressiveAgentStrategy.cpp DefaultAgentStrategy.cpp Exceptions.cpp Strategy.cpp)
 add_executable(ucd-csci2312-pa4 ${SOURCE_FILES})
